# update-flake-inputs-gitea

./: README.md  action.yml  flake.nix  package.nix  packages.nix  pyproject.toml  shell.nix  shells.nix
.github/workflows/: test.yml  update-flake-inputs.yml
src/update_flake_inputs/: __init__.py  __main__.py  cli.py  exceptions.py  flake_service.py  gitea_service.py
tests/: __init__.py  test_flake_service.py  test_gitea_service.py  test_process_flake_updates.py
tests/fixtures/local-flake-repo/: flake.nix
tests/fixtures/minimal/: flake.nix
tests/fixtures/no-lock/: flake.nix
tests/fixtures/simple/: flake.nix
tests/fixtures/subflake/: flake.nix
tests/fixtures/subflake/sub/: flake.nix
tests/fixtures/up-to-date/: flake.nix
